--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-training",
+  "name": "webpack-changeenv",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,24 +7,21 @@
     "test": "echo \"Error: \" && exit 1",
     "start": "webpack --mode development",
     "build": "webpack --env production"
-
-
   },
   "author": "Mateusz",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@webpack-cli/init": "^0.3.0",
+    "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "style-loader": "^1.0.0",
+    "uuid": "^3.3.3",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
-  },
-  "dependencies": {
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.6",
-    "uuid": "^3.3.3"
   }
 }
